--- a/Main.html
+++ b/Main.html
@@ -46,19 +46,7 @@
                     <p>Travel.com offers best deals on India tour packages.</p>
                     <!-- <a href="#category" class="btn">get started</a> -->
                     <canvas id="rive_canvas"> Cat Button</canvas>
-                    <script>
-                        const rive = require("@rive-app/canvas");
-                            const r = new rive.Rive({
-                            src: "https://drive.google.com/file/d/1lq3i0w7_cmtSh2c493ByTnbmZBsAMTpj/view?usp=sharing",
-                            // Or the path to a public Rive asset
-                            // src: '/public/example.riv',
-                            canvas: document.getElementById("rive_canvas"),
-                            autoplay: true,
-                            onLoad: () => {
-                                r.resizeDrawingSurfaceToCanvas();
-                            },
-                        });
-                    </script>
+                    <script>src = 'js/rive.js'</script>
                     
                 </div>
             </div>
